Layout auf Kleinen Monitor angepasst.