@@ -1,5 +1,1 @@
 # Der-Geraet
-
-
-
---add-opens=Der.Geraet.Maven/com.example=ALL-UNNAMED --add-reads Der.Geraet.Maven=ALL-UNNAMED
